# dsci310-ia5-zhvner-packages

./: README.md
pycounts/: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pycounts/docs/: conf.py  einstein.txt  example.ipynb
pycounts/src/pycounts/: pycounts.py
pycounts/tests/: test_pycounts.py
